@@ -19,6 +19,8 @@
 -add closeevent.
 -add display set_icon.
 -update color object.
+-update rect comparison methods.
+-revise vector methods for tuple argument.
 
 0.26    2022-04-18
 -revise textarea object.
